--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js",
+    "build": "babel src -d dist",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +22,11 @@
     "mongoose": "^8.13.2",
     "nodemailer": "^6.10.1",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.28.0",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "nodemon": "^3.1.10"
   }
 }
