--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rm -rf dist",
     "dev": "nodemon dist/server.js",
     "build": "npx babel controllers middleware models routes server.js --out-dir dist --ignore node_modules",
     "start": "node dist/server.js"
@@ -27,7 +27,6 @@
     "@babel/cli": "^7.28.0",
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
-    "nodemon": "^3.1.10",
-    "rimraf": "^6.0.1"
+    "nodemon": "^3.1.10"
   }
 }
