--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prebuild": "rm -rf dist",
+    "prebuild": "rimraf dist",
     "dev": "nodemon dist/server.js",
     "build": "npx babel controllers middleware models routes server.js --out-dir dist --ignore node_modules",
     "start": "node dist/server.js"
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodemailer": "^6.10.1",
+    "rimraf": "^6.0.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
