--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prebuild": "npx rimraf dist",
     "dev": "nodemon dist/server.js",
-    "build": "npx babel controllers middleware models routes server.js --out-dir dist --ignore node_modules",
+    "build": "npx babel --out-dir dist --ignore node_modules",
     "start": "node dist/server.js"
   },
   "keywords": [],
