--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "prebuild": "npx rimraf dist",
     "dev": "nodemon dist/server.js",
-    "build": "npx babel . --out-dir dist --ignore node_modules,dist",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "build": "npx babel . --out-dir dist --ignore node_modules,dist"
   },
   "keywords": [],
   "author": "",
