--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,11 @@
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1",
     "multer-gridfs-storage": "^5.0.2",
-    "nodemon": "^2.0.22",
     "socket.io": "^4.8.1",
     "validator": "^13.9.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
