--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,6 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
@@ -10,22 +9,17 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "axios": "^1.9.0",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "gridfs-stream": "^1.1.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.6.0",
-    "mongoose": "^7.3.0",
-    "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2",
-    "socket.io": "^4.8.1",
-    "validator": "^13.9.0"
-  },
   "description": "",
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.1.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.2",
+    "nodemailer": "^7.0.5",
+    "socket.io": "^4.8.1"
+  },
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
